--- a/ServiceFabric/samples/SF.Async.App/SF.Async.Logic.Entry/SF.Async.Logic.Entry.csproj
+++ b/ServiceFabric/samples/SF.Async.App/SF.Async.Logic.Entry/SF.Async.Logic.Entry.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x64</Platform>
-    <ProjectGuid>{F7E19646-9999-4224-89D5-5C63F019A429}</ProjectGuid>
+    <ProjectGuid>{E7C9E440-148C-412D-8F4B-E079D897901A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SF.Async.Entry</RootNamespace>
-    <AssemblyName>SF.Async.Entry</AssemblyName>
+    <RootNamespace>SF.Async.Logic.Entry</RootNamespace>
+    <AssemblyName>SF.Async.Logic.Entry</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
