--- a/ServiceFabric/samples/SF.Async.App/SF.Async.Abstractions/SF.Async.Abstractions.csproj
+++ b/ServiceFabric/samples/SF.Async.App/SF.Async.Abstractions/SF.Async.Abstractions.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.7.198" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services.Wcf" Version="2.7.198" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SF.Async.Interfaces\SF.Async.Interfaces.csproj" />
   </ItemGroup>
 
