add messageContext class to unify transformation

--- a/ServiceFabric/samples/SF.Async.App/SF.Async.Interfaces/SF.Async.Interfaces.csproj
+++ b/ServiceFabric/samples/SF.Async.App/SF.Async.Interfaces/SF.Async.Interfaces.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net452</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ServiceFabric" Version="5.7.198" />
+  </ItemGroup>
+
 </Project>
