--- a/ServiceFabric/samples/SF.Async.App/SF.Async.Extensions/SF.Async.Extensions.csproj
+++ b/ServiceFabric/samples/SF.Async.App/SF.Async.Extensions/SF.Async.Extensions.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.5.216" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.7.198" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SF.Async.Abstractions\SF.Async.Abstractions.csproj" />
+    <ProjectReference Include="..\SF.Async.Interfaces\SF.Async.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
