--- a/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.StateFul/SF.Async.StateFul.csproj
+++ b/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.StateFul/SF.Async.StateFul.csproj
@@ -92,6 +92,12 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SF.Async.Operation.Common\SF.Async.Operation.Common.csproj">
+      <Project>{567D9CFD-B8C3-4F5F-BE82-B1F584D88B59}</Project>
+      <Name>SF.Async.Operation.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
