--- a/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.Operation.Common/SF.Async.Operation.Common.csproj
+++ b/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.Operation.Common/SF.Async.Operation.Common.csproj
@@ -2,6 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <RuntimeIdentifier>win7-x64</RuntimeIdentifier>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="2.7.198" />
+  </ItemGroup>
 
 </Project>
