--- a/ServiceFabric/samples-async/SF.Async.Sample/WebApp/WebApp.csproj
+++ b/ServiceFabric/samples-async/SF.Async.Sample/WebApp/WebApp.csproj
@@ -17,10 +17,16 @@
     <PackageReference Include="Microsoft.ServiceFabric.AspNetCore.Kestrel" Version="2.7.198" />
     <PackageReference Include="Microsoft.ServiceFabric.Data" Version="2.7.198" />
     <PackageReference Include="Microsoft.ServiceFabric.Services" Version="2.7.198" />
+    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="2.7.198" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SF.Async.Operation.Common\SF.Async.Operation.Common.csproj" />
+    <ProjectReference Include="..\SF.Async.StateFulQueue\SF.Async.StateFulQueue.csproj" />
   </ItemGroup>
 
 </Project>
