--- a/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.StateFulQueue/SF.Async.StateFulQueue.csproj
+++ b/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.StateFulQueue/SF.Async.StateFulQueue.csproj
@@ -104,6 +104,10 @@
       <Project>{567D9CFD-B8C3-4F5F-BE82-B1F584D88B59}</Project>
       <Name>SF.Async.Operation.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SF.Async.Operation.Usage\SF.Async.Operation.Usage.csproj">
+      <Project>{6E3115AE-1FEE-4D68-8DCA-45A909B99BC1}</Project>
+      <Name>SF.Async.Operation.Usage</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
