--- a/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.Usage/SF.Async.Usage.csproj
+++ b/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.Usage/SF.Async.Usage.csproj
@@ -6,11 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.Collections.Immutable" Version="1.4.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.ServiceFabric.Services.Remoting" Version="2.7.198" />
+    <ProjectReference Include="..\SF.Async.Core\SF.Async.Core.csproj" />
   </ItemGroup>
 
 </Project>
