--- a/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.StateFulQueue/SF.Async.StateFulQueue.csproj
+++ b/ServiceFabric/samples-async/SF.Async.Sample/SF.Async.StateFulQueue/SF.Async.StateFulQueue.csproj
@@ -87,6 +87,7 @@
     <Reference Include="System.ServiceModel" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyTransferer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\OccupantImpl.cs" />
     <Compile Include="StateFulQueue.cs" />
